<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/modal"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:background="@drawable/device_panel"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/closeModalBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Back" />

            <Button
                android:id="@+id/refreshBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:text="Refresh" />
        </FrameLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/pairedDevicesLabel"
                android:fontFamily="sans-serif-black"
                android:text="Paired Devices"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="0dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pairedRecyclerView"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/discDevicesLabel"
                android:fontFamily="sans-serif-black"
                android:text="Available Devices"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:paddingTop="0dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/discoveredRecyclerView"
                android:layout_width="260dp"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/controllerMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="412dp"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme" />
        </TableRow>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/remoteControlLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RC"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/forwardBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/forward"
                android:focusable="true"
                app:srcCompat="@android:drawable/arrow_up_float" />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/leftBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/left"
                android:focusable="true"
                android:rotationY="-180"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/rightBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_media_play" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/rightBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/right"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/leftBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_media_play" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/backwardBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/backward"
                android:focusable="true"
                android:rotationX="-184"
                app:srcCompat="@android:drawable/arrow_up_float" />
        </FrameLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/up"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:maxWidth="56dp"
                android:text="@string/up" />
        </FrameLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/down"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:maxWidth="56dp"
                android:text="@string/down" />
        </FrameLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/blueAvailStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/blueRequestTurnOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/blueConStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/discBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/discover" />
        </FrameLayout>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>